# VortexRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  format.yml
apps/: CMakeLists.txt  demo.cpp
apps/assets/Objects/Cube/: cube.blend  cube.mtl
apps/assets/Shaders/: Light.glsl  Phong.glsl
apps/assets/shaders/: Base.glsl
cmake/: ccache.cmake  clangformat.cmake  submodule.cmake
docs/: CMakeLists.txt  mainpage.md  shader.md
include/Vortex/: Buffer.hpp  Camera.hpp  Context.hpp  Core.hpp  Framebuffer.hpp  Platform.hpp  RenderCommand.hpp  Renderbuffer.hpp  Renderer.hpp  RendererAPI.hpp  Scene.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  Vortex.hpp  Window.hpp
include/Vortex/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLFramebuffer.hpp  OpenGLRenderbuffer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp
include/Vortex/Platform/Vulkan/: VulkanBuffer.hpp  VulkanContext.hpp  VulkanFramebuffer.hpp  VulkanRenderbuffer.hpp  VulkanRendererAPI.hpp  VulkanShader.hpp  VulkanTexture.hpp  VulkanVertexArray.hpp
include/Vortex/Scene/: Mesh.hpp  Model.hpp  Scene.hpp
resources/: Base.glsl
src/: Asserts.cpp  Buffer.cpp  CMakeLists.txt  Camera.cpp  Context.cpp  Framebuffer.cpp  RenderCommand.cpp  Renderbuffer.cpp  Renderer.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  Vortex.cpp  Window.cpp
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRenderbuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanFramebuffer.cpp  VulkanRenderbuffer.cpp  VulkanRendererAPI.cpp  VulkanShader.cpp  VulkanTexture.cpp  VulkanVertexArray.cpp
src/Scene/: Mesh.cpp  Model.cpp
